# RefMaint

./: .env.example  .gitignore  .replit  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  replit.md  start.sh
attached_assets/: Pasted--OBJECTIF-Ajouter-un-module-GMAO-Visuelle-l-application_1783537848214.txt  Pasted-2026-Jul-01-08-56-15-346823-Docker-29-4-0-with-BuildKit_1782896289977.txt  Pasted-2026-Jul-01-09-00-21-251569-Docker-29-4-0-with-BuildKit_1782896888714.txt  Pasted-2026-Jul-08-11-36-28-663912-Docker-29-6-1-with-BuildKit_1783510640686.txt  Pasted-2026-Jul-08-11-55-46-048863-Docker-29-6-1-with-BuildKit_1783511854214.txt  Pasted-2026-Jul-08-11-59-40-549509-Docker-29-6-1-with-BuildKit_1783512115680.txt  Pasted-2026-Jul-08-12-03-18-049202-Docker-29-6-1-with-BuildKit_1783512297779.txt  Pasted-2026-Jul-08-12-07-18-376484-Docker-29-6-1-with-BuildKit_1783512582959.txt  Pasted-2026-Jul-08-12-16-08-494510-Docker-29-6-1-with-BuildKit_1783513127882.txt  Pasted-2026-Jul-08-12-22-49-951644-Docker-29-6-1-with-BuildKit_1783513481780.txt  Pasted-2026-Jul-08-12-27-18-518670-Docker-29-6-1-with-BuildKit_1783513753519.txt  Pasted-2026-Jul-08-12-31-53-392023-Docker-29-6-1-with-BuildKit_1783514044963.txt  Pasted-2026-Jul-08-12-39-33-962212-Docker-29-6-1-with-BuildKit_1783514468835.txt  Pasted-2026-Jul-08-12-43-39-959665-Docker-29-6-1-with-BuildKit_1783514880678.txt  Pasted-2026-Jun-29-09-55-26-435041-Docker-29-4-0-with-BuildKit_1782727124190.txt  Pasted-2026-Jun-29-20-39-53-229708-Docker-29-4-0-with-BuildKit_1782895034830.txt  (+1 more)
backend/: .dockerignore  Dockerfile  (+3 more)
(+43 files in other folders)
