[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "fastapi>=0.138.1",
    "gunicorn>=26.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
